--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -26,7 +27,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PROFILE INFORMATION"
+                android:text="@string/settings_profile_information"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/placeholder"
@@ -48,6 +49,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_expand_right"
                     android:layout_alignParentEnd="true"
+                    android:contentDescription="@string/img_description"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="15dp"/>
 
@@ -62,6 +64,7 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
+                        android:contentDescription="@string/img_description"
                         android:src="@drawable/ic_mail"
                         android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
@@ -71,8 +74,9 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/cardView"
+                    tools:ignore="RelativeOverlap"
                     android:layout_marginStart="20dp"
-                    android:text="Username"
+                    android:text="@string/settings_username"
                     android:fontFamily="@font/work_sans_regular"
                     android:textSize="16sp"
                     android:textColor="@color/white"/>
@@ -94,6 +98,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_expand_right"
                     android:layout_alignParentEnd="true"
+                    android:contentDescription="@string/img_description"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="15dp"/>
 
@@ -109,6 +114,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_user_fill"
+                        android:contentDescription="@string/img_description"
                         android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
@@ -118,10 +124,11 @@
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/cardView1"
                     android:layout_marginStart="20dp"
-                    android:text="Display name"
+                    android:text="@string/settings_display_name"
                     android:fontFamily="@font/work_sans_regular"
                     android:textSize="16sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    tools:ignore="RelativeOverlap" />
 
             </RelativeLayout>
 
@@ -142,6 +149,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_expand_right"
                     android:layout_alignParentEnd="true"
+                    android:contentDescription="@string/img_description"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="15dp"/>
 
@@ -157,6 +165,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_user_box_fill"
+                        android:contentDescription="@string/img_description"
                         android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
@@ -165,8 +174,9 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/cardView2"
+                    tools:ignore="RelativeOverlap"
                     android:layout_marginStart="20dp"
-                    android:text="Profile photo"
+                    android:text="@string/settings_profile_photo"
                     android:fontFamily="@font/work_sans_regular"
                     android:textSize="16sp"
                     android:textColor="@color/white"/>
@@ -189,6 +199,7 @@
                     android:src="@drawable/ic_expand_right"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
+                    android:contentDescription="@string/img_description"
                     android:layout_marginEnd="15dp"/>
 
                 <androidx.cardview.widget.CardView
@@ -203,6 +214,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_bio"
+                        android:contentDescription="@string/img_description"
                         android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
@@ -210,9 +222,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    tools:ignore="RelativeOverlap"
                     android:layout_toEndOf="@id/cardView3"
                     android:layout_marginStart="20dp"
-                    android:text="Biography"
+                    android:text="@string/settings_biography"
                     android:fontFamily="@font/work_sans_regular"
                     android:textSize="16sp"
                     android:textColor="@color/white"/>
@@ -226,7 +239,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PERSONNAL INFORMATION"
+                android:text="@string/settings_personal_information"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/placeholder"
@@ -248,6 +261,7 @@
                     android:src="@drawable/ic_expand_right"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
+                    android:contentDescription="@string/img_description"
                     android:layout_marginEnd="15dp"/>
 
                 <androidx.cardview.widget.CardView
@@ -260,6 +274,7 @@
                     android:layout_marginStart="15dp">
                     <ImageView
                         android:layout_width="30dp"
+                        android:contentDescription="@string/img_description"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_email"
                         android:layout_gravity="center"/>
@@ -271,8 +286,9 @@
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/cardView5"
                     android:layout_marginStart="20dp"
-                    android:text="Email"
+                    android:text="@string/settings_email"
                     android:fontFamily="@font/work_sans_regular"
+                    tools:ignore="RelativeOverlap"
                     android:textSize="16sp"
                     android:textColor="@color/white"/>
 
@@ -292,6 +308,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_expand_right"
                     android:layout_alignParentEnd="true"
+                    android:contentDescription="@string/img_description"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="15dp"/>
 
@@ -307,6 +324,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_key"
+                        android:contentDescription="@string/img_description"
                         android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
@@ -315,8 +333,9 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/cardView6"
+                    tools:ignore="RelativeOverlap"
                     android:layout_marginStart="20dp"
-                    android:text="Password"
+                    android:text="@string/settings_password"
                     android:fontFamily="@font/work_sans_regular"
                     android:textSize="16sp"
                     android:textColor="@color/white"/>
@@ -338,6 +357,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_expand_right"
+                    android:contentDescription="@string/img_description"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="15dp"/>
@@ -354,6 +374,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/ic_lock"
+                        android:contentDescription="@string/img_description"
                         android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
@@ -363,8 +384,9 @@
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/cardView7"
                     android:layout_marginStart="20dp"
-                    android:text="Account Visibility"
+                    android:text="@string/settings_account_visibility"
                     android:fontFamily="@font/work_sans_regular"
+                    tools:ignore="RelativeOverlap"
                     android:textSize="16sp"
                     android:textColor="@color/white"/>
 
@@ -385,6 +407,7 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_expand_right"
                     android:layout_alignParentEnd="true"
+                    android:contentDescription="@string/img_description"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="15dp"/>
 
@@ -400,6 +423,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_birthday"
+                        android:contentDescription="@string/img_description"
                         android:layout_gravity="center"/>
                 </androidx.cardview.widget.CardView>
 
@@ -409,9 +433,60 @@
                     android:layout_centerVertical="true"
                     android:layout_toEndOf="@id/cardView8"
                     android:layout_marginStart="20dp"
-                    android:text="Birthday"
+                    android:text="@string/settings_birthday"
                     android:fontFamily="@font/work_sans_regular"
                     android:textSize="16sp"
+                    android:textColor="@color/white"
+                    tools:ignore="RelativeOverlap" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="55dp"
+                android:layout_height="54dp"
+                android:clickable="true"
+                android:id="@+id/logOut"
+                android:focusable="true"
+                android:background="@drawable/bg_card_settings">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_expand_right"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:contentDescription="@string/img_description"
+                    android:layout_marginEnd="15dp"/>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    app:cardBackgroundColor="#DA3939"
+                    android:id="@+id/cardView9"
+                    app:cardCornerRadius="30dp"
+                    android:layout_marginStart="15dp">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_log_out"
+                        android:contentDescription="@string/img_description"
+                        android:layout_gravity="center"/>
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/cardView9"
+                    android:layout_marginStart="20dp"
+                    android:text="@string/settings_log_out"
+                    android:fontFamily="@font/work_sans_regular"
+                    android:textSize="16sp"
+                    tools:ignore="RelativeOverlap"
                     android:textColor="@color/white"/>
 
             </RelativeLayout>
