--- a/app/src/main/res/layout/layout_item_message_left.xml
+++ b/app/src/main/res/layout/layout_item_message_left.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_item_message_left"
         android:minHeight="35dp"
-        android:id="@+id/rel"
+        android:id="@+id/messageCard"
         android:layout_alignParentStart="true"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="80dp">
@@ -42,7 +42,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rel"
+        android:layout_below="@id/messageCard"
         android:text=""
         android:fontFamily="@font/work_sans_regular"
         android:layout_marginStart="50dp"
@@ -51,7 +51,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_gravity="center_vertical"
-        android:layout_below="@id/rel"
+        android:layout_below="@id/messageCard"
         android:layout_marginTop="-20dp"
         android:id="@+id/friendProfilePhoto"
         android:src="@drawable/default_photo"
