--- a/app/src/main/res/layout/snippet_profile_follow.xml
+++ b/app/src/main/res/layout/snippet_profile_follow.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="3"
+    android:gravity="center"
     android:orientation="horizontal">
 
     <LinearLayout
