--- a/app/src/main/res/layout/layout_item_message_left.xml
+++ b/app/src/main/res/layout/layout_item_message_left.xml
@@ -14,22 +14,13 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="80dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:fontFamily="@font/work_sans_medium"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="15dp"
-            android:id="@+id/displayName"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="Une deux trois"
             android:id="@+id/textMessageLeft"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
